--- a/BookManagement/index.html
+++ b/BookManagement/index.html
@@ -14,7 +14,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>               
+                </button>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -22,36 +22,39 @@
                     <li><a href="#!/books">Books</a></li>
                     <li><a href="#!/about">About</a></li>
                 </ul>
-            </div>            
+            </div>
         </div>
     </div>
-    <div class="container body-content">        
-        <div ng-view/>
+    <div class="container body-content">
+        <div ng-view />
     </div>
     <!--core libraries section-->
     <script type="text/javascript" src="app/assets/lib/angular.js"></script>
     <script type="text/javascript" src="app/assets/lib/angular-route.js"></script>
     <script type="text/javascript" src="app/assets/lib/angular-sanitize.js"></script>
+    <script type="text/javascript" src="app/assets/lib/ui-bootstrap-tpls-2.5.0.js"></script>
     <script type="text/javascript" src="app/assets/lib/angular-animate.js"></script>
     <script type="text/javascript" src="app/assets/lib/angularjs-toast.js"></script>
     <script type="text/javascript" src="app/assets/lib/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="app/assets/lib/bootstrap.js"></script>
     <!--end section-->
-
     <!--application scripts section-->
     <script type="text/javascript" src="app/app.js"></script>
     <!--end section-->
-
     <!--controllers section-->
     <script type="text/javascript" src="app/controllers/home.controller.js"></script>
-    <script type="text/javascript" src="app/controllers/book.controller.js"></script>
-    <!--end section--> 
-    
+    <script type="text/javascript" src="app/controllers/book/list.controller.js"></script>
+    <script type="text/javascript" src="app/controllers/book/add.controller.js"></script>
+    <script type="text/javascript" src="app/controllers/book/edit.controller.js"></script>
+    <!--end section-->
+    <!--factories section-->
+    <script type="text/javascript" src="app/factories/toaster.factory.js"></script>
+    <script type="text/javascript" src="app/factories/modalwindow.factory.js"></script>
+    <!--end section-->
     <!--services section-->
     <script type="text/javascript" src="app/services/book.service..js"></script>
-    <script type="text/javascript" src="app/services/notification.service.js"></script>
-     <!-- end section-->   
-    
+    <!-- end section-->
+
 </body>
 </html>
 
