- refactored web api and angularjs app. - integrate webapi with angularjs app. - fixed some minor issues with regards to data binding.

--- a/BookManagement/index.html
+++ b/BookManagement/index.html
@@ -50,10 +50,9 @@
     <!--factories section-->
     <script type="text/javascript" src="app/factories/toaster.factory.js"></script>
     <script type="text/javascript" src="app/factories/modalwindow.factory.js"></script>
+    <script type="text/javascript" src="app/factories/book.service.factory.js"></script>
     <!--end section-->
-    <!--services section-->
-    <script type="text/javascript" src="app/services/book.service..js"></script>
-    <!-- end section-->
+    
 
 </body>
 </html>
